<resources>
    <string name="app_name">Exchange Rates</string>
    <string name="title_home">Home</string>
    <string name="title_converter">Converter</string>
    <string name="title_bank">Banks</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="currency">Currency</string>
    <string name="buying">Buying</string>
    <string name="sale">Sale</string>
    <string name="n_bank">NB RB</string>
    <string name="exchange_rates_in_banks">Exchange rates in banks</string>
    <string name="bank">Bank</string>
    <string name="usd">USD</string>
    <string name="euro">EURO</string>
    <string name="rub">RUB</string>
    <string name="date_time">%1$s</string>
    <string name="no_internet">No Internet connection</string>
</resources>